--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(gnfs)
 
 file(GLOB_RECURSE SOURCES src/*)
 
-find_package(Boost 1.53 REQUIRED)
+set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
+
+find_package(GMP REQUIRED)
+find_package(NTL REQUIRED)
 
 add_executable(gnfs ${SOURCES})
-target_link_libraries(gnfs ${Boost_LIBRARIES})
+target_link_libraries(gnfs ${GMP_LIBRARIES} ${NTL_LIBRARY})
